2008-07-15  Nestor Salceda  <nestor.salceda@gmail.com>

	* ModuleRocks.cs: Look up the Mono.Cecil.Mdb.dll in the GAC if can't be
	found in the current folder.

2008-07-12  Sebastien Pouliot  <sebastien@ximian.com>

	* TypeRocks.cs: Added IsStatic for static types (2.0+). Fixed 
	IsVisible to work when resolving is required (or not possible).

2008-07-12  Sebastien Pouliot  <sebastien@ximian.com> 

	* InstructionRocks.cs: Change GetOperand to case Ldc_I4_S to an
	integer before returing it since it simplify the rules, e.g. when
	the value is used in a collection.

2008-07-07  Sebastien Pouliot  <sebastien@ximian.com>

	* CommonRocks.cs: Change rocks from IList<T> to ICollection<T> 
	since they will be more useful this way.
	* TypeRocks.cs: Avoid exceptions when a Resolve call fails.
	IsDelegate fix by Cedric Vivier.

2008-07-05  Sebastien Pouliot  <sebastien@ximian.com> 

	* InstructionRocks.cs: Add a special case for PopAll so we can
	abort the track back (without an exception). Fix XML documentation
	warning.

2008-07-05  Sebastien Pouliot  <sebastien@ximian.com>

	* InstructionRocks.cs: Add IsLoadElement, IsLoadIndirect and
	TraceBack rocks.

2008-06-29  Sebastien Pouliot  <sebastien@ximian.com>

	* InstructionRocks.cs: Change GetOperand to return a 
	TypeReference when "this" (ldarg_0 in an instance method) is 
	found.

2008-06-23  Sebastien Pouliot  <sebastien@ximian.com>

	* InstructionRocks.cs: Add GetParameter, IsLoadArgument and 
	IsStoreArgument rocks. Move GetPopCount and GetPushCount from 
	StackEntryAnalysis.

2008-06-15  Sebastien Pouliot  <sebastien@ximian.com>

	* InstructionRocks.cs: Add GetOperand rock to simplify the analysis
	of macro instructions.

2008-06-14 Sebastien Pouliot  <sebastien@ximian.com>

	* InstructionRocks.cs: New. Extension methods for Instruction.

2008-05-17 Sebastien Pouliot  <sebastien@ximian.com>

	* ModuleRocks.cs: New. Extension methods for ModuleDefinition.

2008-04-27 Jb Evain  <jbevain@novell.com>
